Started to create device item's movements table into device details window.