@@ -19,8 +19,12 @@ package com.prosystemingegneri.censistant.business.warehouse.boundary;
 import com.prosystemingegneri.censistant.business.production.boundary.DeviceService;
 import com.prosystemingegneri.censistant.business.production.boundary.SystemService;
 import com.prosystemingegneri.censistant.business.production.entity.Device;
+import com.prosystemingegneri.censistant.business.production.entity.Item;
 import com.prosystemingegneri.censistant.business.production.entity.System;
 import com.prosystemingegneri.censistant.business.purchasing.entity.BoxedItem;
+import com.prosystemingegneri.censistant.business.purchasing.entity.BoxedItem_;
+import com.prosystemingegneri.censistant.business.purchasing.entity.SupplierItem;
+import com.prosystemingegneri.censistant.business.purchasing.entity.SupplierItem_;
 import com.prosystemingegneri.censistant.business.siteSurvey.boundary.WorkerService;
 import com.prosystemingegneri.censistant.business.siteSurvey.entity.Worker;
 import com.prosystemingegneri.censistant.business.user.entity.UserApp;
@@ -35,10 +39,13 @@ import java.util.List;
 import javax.ejb.Stateless;
 import javax.inject.Inject;
 import javax.persistence.EntityManager;
+import javax.persistence.NoResultException;
+import javax.persistence.NonUniqueResultException;
 import javax.persistence.PersistenceContext;
 import javax.persistence.TypedQuery;
 import javax.persistence.criteria.CriteriaBuilder;
 import javax.persistence.criteria.CriteriaQuery;
+import javax.persistence.criteria.Join;
 import javax.persistence.criteria.Order;
 import javax.persistence.criteria.Path;
 import javax.persistence.criteria.Predicate;
@@ -123,13 +130,13 @@ public class HandledItemService implements Serializable{
         em.remove(readHandledItem(id));
     }
     
-    public List<HandledItem> listHandledItems(int first, int pageSize, String sortField, Boolean isAscending, BoxedItem boxedItem) {
+    public List<HandledItem> listHandledItems(int first, int pageSize, String sortField, Boolean isAscending, BoxedItem boxedItem, Location fromOrToLocation, Item item) {
         CriteriaBuilder cb = em.getCriteriaBuilder();
         CriteriaQuery<HandledItem> query = cb.createQuery(HandledItem.class);
         Root<HandledItem> root = query.from(HandledItem.class);
         CriteriaQuery<HandledItem> select = query.select(root).distinct(true);
         
-        List<Predicate> conditions = calculateConditions(cb, root, boxedItem);
+        List<Predicate> conditions = calculateConditions(cb, root, boxedItem, fromOrToLocation, item);
 
         if (!conditions.isEmpty())
             query.where(conditions.toArray(new Predicate[conditions.size()]));
@@ -152,37 +159,56 @@ public class HandledItemService implements Serializable{
         if (pageSize > 0) {
             typedQuery.setMaxResults(pageSize);
             typedQuery.setFirstResult(first);
-        }
-
-        if (boxedItem != null)   //we don't want all the handled items!
             return typedQuery.getResultList();
-        else
-            return null;
+        }
+        else {
+            if (boxedItem != null || fromOrToLocation != null || item != null)   //we don't want all the handled items!
+                return typedQuery.getResultList();
+            else
+                return null;
+        }
     }
     
-    public Long getLocationsCount(BoxedItem boxedItem) {
+    public Long getHandledItemsCount(BoxedItem boxedItem, Location fromOrToLocation, Item item) {
         CriteriaBuilder cb = em.getCriteriaBuilder();
         CriteriaQuery<Long> query = cb.createQuery(Long.class);
         Root<HandledItem> root = query.from(HandledItem.class);
         CriteriaQuery<Long> select = query.select(cb.count(root));
 
-        List<Predicate> conditions = calculateConditions(cb, root, boxedItem);
+        List<Predicate> conditions = calculateConditions(cb, root, boxedItem, fromOrToLocation, item);
 
         if (!conditions.isEmpty())
             query.where(conditions.toArray(new Predicate[conditions.size()]));
-
-        if (boxedItem != null)   //we don't want all the handled items!
+        
+        try {
             return em.createQuery(select).getSingleResult();
-        else
-            return Long.valueOf(0);
+        } catch (NoResultException e) {
+            return new Long(0);
+        }
+        catch (NonUniqueResultException e) {
+            return em.createQuery(select).getResultList().get(0);
+        }
     }
     
-    private List<Predicate> calculateConditions(CriteriaBuilder cb, Root<HandledItem> root, BoxedItem boxedItem) {
+    private List<Predicate> calculateConditions(CriteriaBuilder cb, Root<HandledItem> root, BoxedItem boxedItem, Location fromOrToLocation, Item item) {
         List<Predicate> conditions = new ArrayList<>();
         
         //Boxed item
         if (boxedItem != null)
             conditions.add(cb.equal(root.get(HandledItem_.boxedItem), boxedItem));
+        
+        //From location or to location
+        if (fromOrToLocation != null)
+            conditions.add(cb.or(
+                    cb.equal(root.get(HandledItem_.fromLocation), fromOrToLocation),
+                    cb.equal(root.get(HandledItem_.toLocation), fromOrToLocation)));
+        
+        //Item
+        if (item != null) {
+            Join<HandledItem, BoxedItem> boxedItemRoot = root.join(HandledItem_.boxedItem);
+            Join<BoxedItem, SupplierItem> supplierItemRoot = boxedItemRoot.join(BoxedItem_.item);
+            conditions.add(cb.equal(supplierItemRoot.get(SupplierItem_.item), item));
+        }
         
         return conditions;
     }
